<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_app"
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PetItTESTS.v1.menu.GestisciSegnalazioniFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.6"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/le_mie_segnalazioni"
                android:textColor="@android:color/black"
                android:textSize="26sp" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.4">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">

                    <LinearLayout style="@style/LayoutStyleSettings">

                        <TextView
                            style="@style/TextViewSettingsStyle"
                            android:text="@string/segnalazione_1" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/ic_arrow" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout style="@style/LayoutStyleSettings">

                        <TextView
                            style="@style/TextViewSettingsStyle"
                            android:text="@string/segnalazione_2" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/ic_arrow" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout style="@style/LayoutStyleSettings">

                        <TextView
                            style="@style/TextViewSettingsStyle"
                            android:text="@string/segnalazione_3" />


                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/ic_arrow" />


                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout style="@style/LayoutStyleSettings">

                        <TextView
                            style="@style/TextViewSettingsStyle"
                            android:text="@string/segnalazione_4" />


                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:src="@drawable/ic_arrow" />


                    </LinearLayout>



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="15dp"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>